syntax = "proto3";

package notification;

option go_package = "./notification_service/proto";

// NotificationService defines the RPC methods for notifications.
service NotificationService {
    rpc SendOrderMail(OrderNotificationRequest) returns (NotificationResponse);
    rpc SendPaymentMail(PaymentNotificationRequest) returns (NotificationResponse);
    rpc GetAllNotifications(Empty) returns (NotificationListResponse);
}

message OrderNotificationRequest {
    string user_email = 1;
    int64 order_id = 2;
    string subject = 3;
}

message PaymentNotificationRequest {
    string user_email = 1;
    int64 payment_id = 2;
    string subject = 3;
}

message NotificationResponse {
    Notification notification = 1;
}

message NotificationListResponse {
    repeated Notification notifications = 1;
}

message Notification {
    string id = 1;
    string user_email = 2;
    int64 order_id = 3;
    int64 payment_id = 4;
    string type = 5;
    string subject = 6;
    bool is_sent = 7;
}

message Empty {}